# udp-forwarder

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  bump-version.sh  config.ini.example  install.ps1  install.sh  package-macos.sh
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  test.yml
benches/: forwarding_bench.rs
docs/superpowers/plans/: 2026-03-25-system-tray.md  2026-03-27-multi-listen-ports.md
docs/superpowers/specs/: 2026-03-25-system-tray-design.md
src/: main.rs
ui/: main.slint
