[package]
name = "udp-forwarder"
version = "0.3.0"
edition = "2021"

[dependencies]
rust-ini = "0.21"
libc = "0.2"
auto-launch = "0.6"
open = "5"
slint = { version = "1.9", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-software", "std"] }
tray-icon = "0.21"
image = { version = "0.25", default-features = false, features = ["png"] }
ureq = "3"
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[build-dependencies]
slint-build = "1.9"
image = { version = "0.25", default-features = false, features = ["png"] }

[[bench]]
name = "forwarding_bench"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
